--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # App Annie API key
 app-annie.api.key = 5a9784558e1c5ff7991d04c26e94ac5179009155
+app-annie.api.version = 1.2
 
 spring.velocity.output.encoding=UTF-8
